--- a/pair.html
+++ b/pair.html
@@ -142,7 +142,7 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">© GlobalTechInfo</h3>
+            <h3 class="centered-text">© RAHUL-PANCHAL-XD</h3>
             <br>
             <h6>Enter your number with a country code.</h6>
             <div class="input-container">
